tests/ui/const-generics/mgca/unexpected-fn-item-in-array.stderr
error: function items cannot be used as const args
  --> $DIR/unexpected-fn-item-in-array.rs:7:16
   |
LL | impl A<[usize; fn_item]> for () {}
   |                ^^^^^^^

error: aborting due to 1 previous error

